[api-implement] memo 및 history 코드 구현
